# nd-se

./: .gitignore  API_ARCHITECTURE_CHANGE.md  CLAUDE.md  README.md  TEST_NAV.md  USAGE.md  docker-compose.yml  nginx.conf  quick-start-dummy-oidc.md  requirement.md  start-dev.bat  start-dev.sh  test-mdx-render.html  test-mdx-simple.mdx  test-oidc-flow.sh
.github/: copilot-instructions.md
backend/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  format.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  oidc.py  revalidation.py
backend/app/routers/: analytics.py  auth.py  blog.py  dashboard.py  docs.py  dummy_oidc.py  forum.py  search.py  upload.py  users.py  webhook.py
docs/: Dummy-OIDC-Guide.md  OIDC-SSO-Setup.md
docs-testdata/: introduction.md
docs-testdata/api/: overview.md
docs-testdata/examples/: interactive.mdx
docs-testdata/getting-started/: installation.md  quick-start.md
docs-testdata/guides/backend/: overview.mdx
docs-testdata/guides/frontend/: overview.mdx
docs/v1/en/: intro.md
docs/v1/ko/: guide.md  intro.md
frontend/: .env.example  API_CLIENT_GUIDE.md  Dockerfile  mdx-components.tsx  next.config.js  openapi-ts.config.ts  package-lock.json  package.json  setup-verify.sh  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api-test/: page.tsx
frontend/app/api/dashboard/: route.ts
frontend/app/blog/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/docs/: page.tsx
frontend/app/forum/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: ApiClientProvider.tsx  ApiExample.tsx  CodeBlock.tsx  GeneratedApiExample.tsx  GlobalSearch.tsx  MDXComponents.tsx  MDXProcessor.tsx  MDXRenderer.tsx  RichTextEditor.tsx  SimpleApiTest.tsx  TiptapEditor.tsx  TiptapEditorWrapper.tsx  footer.tsx  navigation.tsx
frontend/components/dashboard/: breadcrumb.tsx  sidebar.tsx
frontend/components/docs/: DocumentNavigation.tsx  TableOfContents.tsx
frontend/hooks/: api.ts  useAuth.tsx  useBlog.ts  useDashboard.ts  useDocs.ts  useForum.ts  useOIDC.tsx  useSearch.ts
frontend/lib/: api-client.ts  api.ts  client-api.ts  query-client.ts  server-api.ts  types.ts
frontend/lib/hooks/: useDocs.ts
frontend/styles/: docusaurus.css  prism.css
scripts/: add_mdx_content.py  insert_test_data.py  load_test_data.py  update_docusaurus_content.py
(+40 files in other folders)
